--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 <head lang="ja">
 
+    <meta charset="UTF-8"/>
+
     <!-- BootStrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script src="js/map.js"></script>
 
     <!-- Material Design -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -38,6 +42,197 @@
         </header>
 
         <div class="content">
+
+            <div class="row">
+
+                <div class="col">
+
+                    <h2>基本設定</h2>
+
+                    <form>
+
+                        <div class="form-group">
+                            <label for="mapId">マップID</label>
+                            <input type="text" class="form-control" id="mapId" placeholder="hoge"/>
+                            <small id="mapIdHelp" class="form-text text-muted">マップを識別するためのIDです。他のマップと被らないIDを指定してください。</small>
+                            <script>
+                                $('#mapId').on('input', function(event) {
+                                    mapData.id = $('#mapId').val();
+                                });
+                            </script>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="mapName">マップ名</label>
+                            <input type="text" class="form-control" id="mapName" placeholder="Hoge"/>
+                            <small id="mapNameHelp" class="form-text text-muted">マップの表示名を指定します。</small>
+                            <script>
+                                $('#mapName').on('input', function(event) {
+                                    mapData.name = $('#mapName').val();
+                                });
+                            </script>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="mapAuthor">製作者名</label>
+                            <input type="text" class="form-control" id="mapAuthor" placeholder="mr_crafter"/>
+                            <small id="mapAuthorHelp" class="form-text text-muted">マップの製作者を指定します。</small>
+                            <script>
+                                $('#mapAuthor').on('input', function(event) {
+                                    mapData.author = $('#mapAuthor').val();
+                                });
+                            </script>
+                        </div>
+
+                    </form>
+
+                </div>
+
+                <div class="col">
+
+                    <h2>参加人数設定</h2>
+
+                    <form>
+
+                        <div class="row">
+
+                            <div class="col">
+
+                                <div class="from-group">
+                                    <label for="mapPlayerMax">最大人数</label>
+                                    <input type="number" class="form-control" id="mapPlayerMax" value="30"/>
+                                    <small id="mapPlayerMaxHelp" class="form-text text-muted">マップに参加できる人数を設定します。</small>
+                                    <script>
+                                        $('#mapPlayerMax').on('input', function(event) {
+                                             mapData.max_player = $('#mapPlayerMax').val();
+                                        });
+                                    </script>
+                                </div>
+
+                            </div>
+
+                            <div class="col">
+
+                                <div class="from-group">
+                                    <label for="mapPlayerMin">最小人数</label>
+                                    <input type="number" class="form-control" id="mapPlayerMin" value="10"/>
+                                    <small id="mapPlayerMinHelp" class="form-text text-muted">マップに参加できる最小人数を設定します。</small>
+                                    <script>
+                                        $('#mapPlayerMin').on('input', function(event) {
+                                            mapData.min_player = $('#mapPlayerMin').val();
+                                        });
+                                    </script>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </form>
+
+                    <hr/>
+
+                    <h2>ラウンド設定</h2>
+
+                    <form>
+
+                        <div class="row">
+
+                            <div class="col">
+
+                                <div class="from-group">
+                                    <label for="mapRound">ラウンド回数</label>
+                                    <input type="number" class="form-control" id="mapRound" value="2"/>
+                                    <small id="mapRoundHelp" class="form-text text-muted">1プレイ中に繰り返すラウンド回数を設定します。</small>
+                                    <script>
+                                        $('#mapRound').on('input', function(event) {
+                                            mapData.max_player = $('#mapRound').val();
+                                        });
+                                    </script>
+                                </div>
+
+                            </div>
+
+                            <div class="col">
+
+                                <div class="from-group">
+                                    <label for="mapRoundTime">ラウンド時間</label>
+                                    <input type="number" class="form-control" id="mapRoundTime" value="900"/>
+                                    <small id="mapRoundTimeHelp" class="form-text text-muted">マップに参加できる最小人数を設定します。</small>
+                                    <script>
+                                        $('#mapRoundTime').on('input', function(event) {
+                                            mapData.min_player = $('#mapRoundTime').val();
+                                        });
+                                    </script>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </form>
+
+                </div>
+
+                <div class="col">
+
+                    <h2>マップ構造体</h2>
+
+                    <form>
+
+                        <div class="row">
+
+                            <div class="from-group">
+                                <label for="mapSchematic">ステージ構造体</label>
+                                <input type="text" class="form-control" id="mapSchematic" placeholder="hoge"/>
+                                <small id="mapSchematicHelp" class="form-text text-muted">ステージ全体の構造体を指定します。拡張子を抜いて指定をしてください。hoge.schemの場合はhogeのみ</small>
+                                <script>
+                                    $('#mapSchematic').on('input', function(event) {
+                                        mapData.schematic = $('#mapSchematic').val();
+
+                                        // voteの方にも同時に変更する
+                                        $('#mapVote').val($('#mapSchematic').val() + ".vote");
+                                        mapData.vote = $('#mapVote').val();
+                                    });
+                                </script>
+                            </div>
+
+                            <div class="from-group">
+                                <label for="mapVote">投票所 構造体</label>
+                                <input type="text" class="form-control" id="mapVote" value="hoge.vote" readonly/>
+                                <small id="mapVoteHelp" class="form-text text-muted">投票所で使用する構造体を指定します。Editorでは自動的に命名される為、設定出来ません。</small>
+                                <script>
+                                    $('#mapVote').on('input', function(event) {
+                                        mapData.vote = $('#mapVote').val();
+                                    });
+                                </script>
+                            </div>
+
+                        </div>
+
+                    </form>
+
+                </div>
+
+            </div>
+
+            <form>
+                <div class="form-group">
+                <button type="button" onclick="outPutMapData()" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+
+            <hr/>
+
+            <from>
+                <div class="form-group">
+                    <label for="outPutTextArea">Output TextArea</label>
+                    <textarea class="form-control" id="outPutTextArea" rows="15"></textarea>
+                    <button type="button" onclick="copyClipboard(outPutTextArea)" class="btn btn-primary">Copy To ClipBoard</button>
+                </div>
+            </from>
+
+            <hr/>
 
         </div>
 
