欠落した文を追加

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 <div class="from-group">
                                     <label for="mapRoundTime">ラウンド時間</label>
                                     <input type="number" class="form-control" id="mapRoundTime" value="900"/>
-                                    <small id="mapRoundTimeHelp" class="form-text text-muted">ラウンド制限時間</small>
+                                    <small id="mapRoundTimeHelp" class="form-text text-muted">ラウンド制限時間を設定します。</small>
                                     <script>
                                         $('#mapRoundTime').on('input', function(event) {
                                             mapData.round_time = $('#mapRoundTime').val();
